Fix select option on ios

--- a/src/app/place/booking/keep/item/misconduct-editor.component.scss
+++ b/src/app/place/booking/keep/item/misconduct-editor.component.scss
@@ -23,5 +23,9 @@
 }
 
 .card-columns {
-    margin-bottom: -1rem;
+    margin-bottom: -0.75rem;
+}
+
+.btn-link {
+    font-weight: bold;
 }
